layout bug fix and added top id fragment identifier for bubble links

--- a/css/app.css
+++ b/css/app.css
@@ -404,10 +404,15 @@ body {
   height: 100vh;
   width: 100vw;
   overflow-x: hidden;
+  overflow-y: auto;
   font-family: "Montserrat", sans-serif;
   color: #fff;
   font-weight: normal;
   line-height: 1.5; }
+
+a {
+  text-decoration: none;
+  color: #fff; }
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
@@ -444,7 +449,7 @@ ul, ol {
   flex-direction: column;
   position: absolute;
   height: 100%;
-  width: 100%; }
+  width: 100vw; }
 
 .info {
   margin: 2em 1em 1em;
