--- a/scss/base/base.scss
+++ b/scss/base/base.scss
@@ -15,9 +15,14 @@ body {
 	height: 100vh;
 	width: 100vw;
 	overflow-x: hidden;
+	overflow-y: auto;
 	@include font-styles($family: $font-stack-primary, $color: $white, $weight: #{normal}, $lh: 1.5);
 } 
 
+a {
+	text-decoration: none;
+	color: $white;
+}
 
 h1, h2, h3, h4, h5, h6 {
 	font-weight: normal;
