--- a/scss/layout/landing.scss
+++ b/scss/layout/landing.scss
@@ -10,7 +10,7 @@
 	@include flex-direction(#{column});
 	position: absolute;
 	height: 100%;
-	width: 100%;
+	width: 100vw;
 }
 
 .info {
